--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http:http://18.219.54.41:9000/</sonar.host.url>
+		<sonar.host.url>http:http://172.31.22.153:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://18.218.39.156:8081/repository/wellsfargo-release/</url>
+	      <url>http:http://3.131.157.3:8081/repository/Visa-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://18.224.8.84:8081/repository/PayPal-snapshots/</url>
+	      <url>http://3.131.157.3:8081/repository/Visa-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
