--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http:http://3.131.157.3:8081/repository/Visa-release/</url>
+	      <url>http://3.131.157.3:8081/repository/Visa-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
